--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: InkaPharmacySB
+- name: InkaPharmacySB123
   path: target/InkaPharmacy-0.0.1-SNAPSHOT.jar
   memory: 1024M
   instances: 1
